# buems-api

./: .gitignore  LICENSE  README.md  __init__.py  alembic.ini  pyproject.toml  requirements.txt
buems/: __init__.py  __main__.py  constants.py  revocation.py
buems/db/: __init__.py  crud.py  db.py  models.py
buems/routers/: __init__.py  account.py  auth.py  common.py  general_auth.py  security.py  staff.py  student.py
migrations/: env.py  script.py.mako
